# MageZero

./: .gitignore  ARCHITECTURE.md  COMMANDS.md  LICENSE  README.md  WinRates.txt  dataset.py  dataset_stats.py  export.py  ignore.roar  pyproject.toml  requirements.txt  round-robin-winrates.txt  server.py  setup_guide.md  test.py  test_log.txt  train.py
.github/workflows/: test.yml
batch/: Dockerfile  Dockerfile.base  commands.sh  generate_and_upload.py  requirements-cpu.txt
configs/: curriculum.yml  game.yml  run.yml
src/magezero/: cli.py  compress_model.py  dataset.py  dataset_stats.py  executor.py  game_exploration.py  graph_winrates.py  inspect_data.py  model.py  muzero_mcts.py  muzero_model.py  round_runner.py  runner.py  selfplay_loop.py  server.py  test.py  train.py  train_muzero.py
src/magezero.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/magezero/util/: config.py  make_ignore.py
src/util/: hdf5_check.py
tests/: README.md  conftest.py  test_executor_helpers.py  test_generate_data.py  test_train_cli.py
