[project]
name = "magezero"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "flask>=2.3",
    "h5py>=3.8",
    "torch>=2.10.0",
    "matplotlib>=3.7",
    "msgpack>=1.0.5",
    "numpy>=1.24",
    "pyroaring>=0.3.6",
    "scipy>=1.10",
    "waitress>=2.1",
    "tqdm>=4.67.3",
    "pyyaml>=6.0",
]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "pytest>=8",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[project.scripts]
train = "magezero.executor:train_cli"
generate-data = "magezero.executor:generate_data"
explore = "magezero.game_exploration:explore_game"
stats = "magezero.dataset_stats:main"
server = "magezero.server:main"
round = "magezero.executor:round_robin"
onedeck = "magezero.executor:one_deck_per_model"